fix: add ilai.co.in to CORS in all backend services - muse-auth-service: add https://ilai.co.in to allowed origins - muse-notes-service: add https://ilai.co.in to allowed origins - muse-ai-service: add CORS config with https://ilai.co.in - muse-academic-service: add https://ilai.co.in to allowed origins - Update health-check.sh with comprehensive service tests